--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "takes notes",
   "main": "server.js",
   "scripts": {
+    "watch": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^2.0.12"
   }
 }
